# Unit-test-generator

./: README.md  pyproject.toml
LLM_with_Web/: README.md  ScrapeUI.py  agent.py
RAG/: ChatUI.py  ai-review.sh  embedding-models.py  live_ollama.py  rag.py  readme.md
Unit-test-generator/: README.md
Unit-test-generator/src/unit_test_generate/crews/generate_unit_test_crew/: generate_unit_test_crew.py
Unit-test-generator/src/unit_test_generate/crews/git_checkout_and_commit_crew/config/: agents.yaml  tasks.yaml
Unit-test-generator/src/unit_test_generate/crews/git_clone_crew/: git_clone_crew.py
Unit-test-generator/src/unit_test_generate/crews/git_crew/: git_crew.py
Unit-test-generator/src/unit_test_generate/crews/service_classes_list_crew/config/: tasks.yaml
Unit-test-generator/src/unit_test_generate/tools/: file_writer_tool.py  git_clone_tool.py  project_build_tool.py
src/unit_test_generate/: main.py
src/unit_test_generate/crews/generate_unit_test_crew/config/: agents.yaml  tasks.yaml
src/unit_test_generate/crews/git_checkout_and_commit_crew/: git_checkout_and_commit_crew.py
src/unit_test_generate/crews/git_clone_crew/config/: agents.yaml  tasks.yaml
src/unit_test_generate/crews/service_classes_list_crew/: service_classes_list_crew.py
src/unit_test_generate/crews/service_classes_list_crew/config/: agents.yaml
src/unit_test_generate/tools/: directory_list_tool.py  git_checkout_tool.py  git_tool.py
