[project]
name = "unit_test_generate"
version = "0.1.0"
description = "unit_test_generate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
]

[project.scripts]
kickoff = "unit_test_generate.main:kickoff"
run_crew = "unit_test_generate.main:kickoff"
plot = "unit_test_generate.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
